[gd_scene load_steps=8 format=2]

[ext_resource path="res://BattleFields/SingleHitBattleField.gd" type="Script" id=1]
[ext_resource path="res://BattleFields/BaseBattleField.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 29 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 30 )

[node name="SingleHitBattleField" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="NormalZone" type="Area2D" parent="Field" index="0"]
position = Vector2( 0, 3 )

[node name="Sprite" type="ColorRect" parent="Field/NormalZone" index="0"]
margin_left = 12.0
margin_top = 25.0
margin_right = 62.0
margin_bottom = 29.0
mouse_filter = 2
color = Color( 0.964706, 0.937255, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/NormalZone" index="1"]
position = Vector2( 37, 27 )
shape = SubResource( 1 )

[node name="StrongZone" type="Area2D" parent="Field" index="1"]
position = Vector2( 0, 3 )

[node name="StrongZone" type="ColorRect" parent="Field/StrongZone" index="0"]
margin_left = 28.0
margin_top = 23.0
margin_right = 46.0
margin_bottom = 31.0
mouse_filter = 2
color = Color( 0.988235, 0.607843, 0.0117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/StrongZone" index="1"]
position = Vector2( 37, 27 )
shape = SubResource( 2 )

[node name="CritZone" type="Area2D" parent="Field" index="2"]
position = Vector2( 35, 20 )

[node name="ColorRect" type="ColorRect" parent="Field/CritZone" index="0"]
margin_top = 5.0
margin_right = 4.0
margin_bottom = 15.0
mouse_filter = 2
color = Color( 0.980392, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/CritZone" index="1"]
position = Vector2( 2, 10 )
shape = SubResource( 3 )

[node name="Pointer" type="Area2D" parent="Field" index="3"]

[node name="Sprite" type="ColorRect" parent="Field/Pointer" index="0"]
margin_left = 1.0
margin_top = 1.0
margin_right = 3.0
margin_bottom = 59.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/Pointer" index="1"]
visible = false
position = Vector2( 2, 30 )
shape = SubResource( 4 )

[node name="BorderL" type="Area2D" parent="Field" index="4"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/BorderL" index="0"]
position = Vector2( 0, 30 )
shape = SubResource( 5 )

[node name="BorderR" type="Area2D" parent="Field" index="5"]
visible = false
position = Vector2( 72, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/BorderR" index="0"]
position = Vector2( 0, 30 )
shape = SubResource( 5 )
[connection signal="area_entered" from="Field/BorderL" to="." method="_on_BorderL_area_entered"]
[connection signal="area_entered" from="Field/BorderR" to="." method="_on_BorderR_area_entered"]
